# phr-eurpi

./: Cargo.toml  LICENSE  README.md
cyw43/: Cargo.toml
cyw43-pio/: Cargo.toml
ltspice/: phr-eurpi-ext-03.asc  phr-eurpi-ext-04.asc  phr-eurpi-ext-05.asc  phr-eurpi-ext-p-p-inv-n-sum-non-inv.asc
src/: main.rs  utils.rs
src/audio/: mod.rs  noise.rs  oscillator.rs
src/audio/oscillator/: formant_oscillator.rs  grainlet_oscillator.rs  harmonic_oscillator.rs  nes_triangle_oscillator.rs  oscillator.rs  sine_oscillator.rs  string_synth_oscillator.rs  super_square_oscillator.rs  variable_saw_oscillator.rs  variable_shape_oscillator.rs  vosim_oscillator.rs  wavetable_oscillator.rs  z_oscillator.rs
src/audio/utils/: rsqrt.rs
src/controls/: analogout.rs  debouncer.rs  mod.rs
src/io/: display.rs  flash.rs  mod.rs
src/io/i2c/: i2cio.rs  i2cpio.rs  mod.rs  mpc4725.rs  ssd1306.rs
src/tasks/: _analogout.rs  analogout.rs  core0.rs  core1.rs  digitalin.rs  display.rs  inputs.rs  inputsdisplay.rs  mod.rs  oscillator.rs
src/utils/: debouncer.rs  mod.rs
