[package]
name = "phr-eurpi"
version = "0.1.0"
edition = "2024"
license = "BSD"
#author = "beat@softbase.tech"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
cyw43 = { version = "0.7", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.10", features = ["defmt"] }
defmt = "1.0"
defmt-rtt = "1.1"
display-interface = "0.5"
display-interface-spi = "0.5"
embassy-embedded-hal = { version = "0.6", features = ["defmt"] }
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { version = "0.1" }
embassy-net = { version = "0.9", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "dns"] }
embassy-net-wiznet = { version = "0.3", features = ["defmt"] }
embassy-rp = { version = "0.10", features = ["defmt", "rp2040", "chrono", "time-driver", "critical-section-impl", "run-from-ram", "rom-func-cache", "intrinsics", "rom-v2-intrinsics"] }
embassy-sync = { version = "0.8", features = ["defmt"] }
embassy-time = { version = "0.5" }
embassy-usb = { version = "0.6", features = ["defmt"] }
embassy-usb-logger = { version = "0.6" }
embedded-graphics = "0.8"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.3", features = ["async"] }
embedded-io-async = { version = "0.7", features = ["defmt"] }
embedded-sdmmc = "0.9"
embedded-storage = { version = "0.3" }
#embedded-tls = { version = "0.18.0", features = ["defmt", "log"], default-features = false }
format_no_std = "1.2"
#mi-plaits-dsp = { git = "https://github.com/bml303/mi-plaits-dsp-rs.git", branch = "master" }
#mi-plaits-dsp = { path="../../modular/mi-plaits-dsp-rs" }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
heapless = "0.9"
log = "0.4"
panic-probe = { version = "1.0", features = ["print-defmt"] }
portable-atomic = { version = "1.13", features = ["critical-section"] }
portable-atomic-util = "0.2.7"
rp-pac = { version="7.0", features = ["rp2040"] }
ssd1306 = { version="0.10.0", default-features = true }
static_cell = "2"

[profile.dev]
opt-level = "s"
lto = true

[profile.release]
debug = 2
opt-level = "s"
lto = true
