[package]
name = "cyw43"
version = "0.1.0"
edition = "2021"
description = "Rust driver for the CYW43439 WiFi chip, used in the Raspberry Pi Pico W."
keywords = ["embedded", "cyw43", "embassy-net", "embedded-hal-async", "wifi"]
categories = ["embedded", "hardware-support", "no-std", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/embassy-rs/embassy"
documentation = "https://docs.embassy.dev/cyw43"

[features]
defmt = ["dep:defmt", "heapless/defmt-03", "embassy-time/defmt"]
log = ["dep:log"]

# Fetch console logs from the WiFi firmware and forward them to `log` or `defmt`.
firmware-logs = []

[dependencies]
embassy-time = { version = "0.3", git="https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.6", git="https://github.com/embassy-rs/embassy.git" }
embassy-futures = { version = "0.1", git="https://github.com/embassy-rs/embassy.git" }
embassy-net-driver-channel = { version = "0.2", git="https://github.com/embassy-rs/embassy.git" }


defmt = { version = "0.3", optional = true }
log = { version = "0.4.17", optional = true }

cortex-m = "0.7"
cortex-m-rt = "0.7"
futures = { version = "0.3", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
num_enum = { version = "0.7", default-features = false }

heapless = "0.8"

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/embassy/blob/cyw43-v$VERSION/cyw43/src/"
src_base_git = "https://github.com/embassy-rs/embassy/blob/$COMMIT/cyw43/src/"
target = "thumbv6m-none-eabi"
features = ["defmt", "firmware-logs"]

[package.metadata.docs.rs]
features = ["defmt", "firmware-logs"]
